--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,6 @@
   --range-progress: 0;
 }
 
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -80,16 +79,51 @@ body {
   height: calc(100% - 80px);
 }
 
-input[type=range] {
+.fcc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.audio {
+  border-radius: 8px;
+  height: 4px;
+  max-width: 300px;
+  width: 100%;
+  cursor: pointer;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.audio::-webkit-slider-thumb {
+  border: 6px solid #fff;
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+/* input[type=range] {
   height: 5px;
   appearance: none;
+  border-radius: 9999px;
   margin: 10px 0;
-  --range-progress: 0;
+  --range-progress: 100%;
 }
 input[type=range]:focus {
   outline: none;
+  appearance: none;
 }
+
+input[type=range]::before {
+  width: var(--range-progress);
+}
+
 input[type=range]::-webkit-slider-runnable-track {
+  appearance: none;
   width: var(--range-progress);
   height: 5px;
   cursor: pointer;
@@ -99,17 +133,18 @@ input[type=range]::-webkit-slider-runnable-track {
   border-radius: 9999px;
   border: 0px solid #000000;
 }
+
 input[type=range]::-webkit-slider-thumb {
-  height: 18px;
-  width: 18px;
+  height: 14px;
+  width: 14px;
   border-radius: 9999px;
   background: white;
   cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -7px;
+  appearance: none;
+  margin-top: -5px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #2497E3;
+  appearance: none;
 }
 input[type=range]::-moz-range-track {
   width: 100%;
@@ -166,4 +201,4 @@ input[type=range]:focus::-ms-fill-lower {
 }
 input[type=range]:focus::-ms-fill-upper {
   background: #2497E3;
-}
+} */
