--- a/app/globals.css
+++ b/app/globals.css
@@ -106,99 +106,12 @@ body {
   appearance: none;
 }
 
-/* input[type=range] {
-  height: 5px;
-  appearance: none;
-  border-radius: 9999px;
-  margin: 10px 0;
-  --range-progress: 100%;
-}
-input[type=range]:focus {
-  outline: none;
-  appearance: none;
+.upgrade-img {
+  border-top-left-radius: 180px;
+  border-top-right-radius: 180px;
 }
 
-input[type=range]::before {
-  width: var(--range-progress);
+.upgrade-shape {
+  border-bottom-left-radius: 280px;
+  border-bottom-right-radius: 280px;
 }
-
-input[type=range]::-webkit-slider-runnable-track {
-  appearance: none;
-  width: var(--range-progress);
-  height: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #2bd97c;
-  border-radius: 9999px;
-  border: 0px solid #000000;
-}
-
-input[type=range]::-webkit-slider-thumb {
-  height: 14px;
-  width: 14px;
-  border-radius: 9999px;
-  background: white;
-  cursor: pointer;
-  appearance: none;
-  margin-top: -5px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  appearance: none;
-}
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #2497E3;
-  border-radius: 1px;
-  border: 0px solid #000000;
-}
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 18px;
-  width: 18px;
-  border-radius: 25px;
-  background: #A1D0FF;
-  cursor: pointer;
-}
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #2497E3;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-fill-upper {
-  background: #2497E3;
-  border: 0px solid #000000;
-  border-radius: 2px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #2497E3;
-  height: 18px;
-  width: 18px;
-  border-radius: 25px;
-  background: #A1D0FF;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #2497E3;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #2497E3;
-} */
