--- a/styles/style.css
+++ b/styles/style.css
@@ -476,7 +476,9 @@ button:disabled {
   }
 
   .footer__top--wrapper {
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 32px;
   }
 
